# AI-Agents

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  candidate_embeddings.hash  candidate_embeddings.npy  candidate_idx_map.json  candidate_sample.jsonl  candidates_sample.jsonl  extract_docx.py  job_description.txt  main.py  precompute_embeddings.py  pyproject.toml  rank.py  requirements.txt  run_ranker.py  sample_submission.csv  submission.csv  submission_metadata.json  submission_metadata_template.yaml  test_bp.py  test_minhash.py  trust_score.py
config/: company_tiers.yaml  jd_spec.json
src/: auditor.py  pipeline.py  synthesis.py
src/core/: behavioral.py  company_matcher.py  integrity.py  semantic.py  skills.py  trajectory.py
src/inspection/: coherence.py  integrity.py  trust.py  trust_engine.py
src/orchestration/: pipeline.py  types.py
src/query/: role_intent.py
src/ranking/: disqualifiers.py  explainer.py  fusion.py
src/reasoning/: behavioral.py  evidence.py  product_context.py  technical_depth.py  title_sieve.py  trajectory.py
src/retrieval/: semantic.py
