[project]
name = "redrob-ranker"
version = "2.0.0"
description = "ShortlistIQ — Multi-signal AI candidate ranking pipeline for the Redrob India Runs Data & AI Challenge"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Tamajit Ghosh", email = "tamajit.ghosh.13@gmail.com" }
]
keywords = ["candidate-ranking", "nlp", "semantic-search", "information-retrieval", "hiring-ai"]
requires-python = ">=3.11"

dependencies = [
    # Core ML & numeric
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "faiss-cpu>=1.7.4",

    # Semantic embeddings
    "sentence-transformers>=2.7.0",

    # Config & serialization
    "pyyaml>=6.0.1",

    # Logging
    "loguru>=0.7.2",

    # JD conversion (.docx → .txt)
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
rank = "rank:main"
extract-docx = "extract_docx:main"
precompute-embeddings = "precompute_embeddings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
